commit-10: [Fix] Dark mode now works for everything- as of now

--- a/src/app/(frontPage)/(carousal)/Carousel.css
+++ b/src/app/(frontPage)/(carousal)/Carousel.css
@@ -7,7 +7,6 @@
   height: 60vh;
 }
 
-
 .slide-wrapper {
   position: absolute;
   top: 0;
@@ -33,12 +32,14 @@
   mask-image: linear-gradient(270deg, transparent 0, rgb(36, 36, 40) 10%, rgb(36, 36, 40) 70%, transparent);
   filter: blur(1px);
 }
+
 .image-container img {
   object-fit: fill;
   width: 100%;
   height: 100%;
 }
-.text-container{
+
+.text-container {
   width: 45%;
   height: 100%;
   display: flex;
@@ -53,7 +54,7 @@
   align-items: center;
   justify-content: flex-start;
   padding-left: 1rem;
-  color: black;
+  color: inherit; /* Changed from black to inherit */
   font-size: 3em;
 
   @media (min-width: 400px) {
@@ -73,7 +74,6 @@
   }
 }
 
-
 .movie-desc-container {
   width: 100%;
   height: fit-content;
@@ -81,7 +81,7 @@
   align-items: center;
   justify-content: flex-start;
   padding-left: 1rem;
-  color: black;
+  color: inherit; /* Changed from black to inherit */
   font-size: 1.5em;
   overflow: hidden;
 
@@ -108,7 +108,7 @@
   display: flex;
   align-items: center;
   padding-left: 1rem;
-  color: black;
+  color: inherit; /* Changed from black to inherit */
   font-size: 1.5em;
 
   @media (min-width: 400px) {
@@ -146,7 +146,7 @@
   align-items: center;
   justify-content: flex-start;
   padding-left: 1rem;
-  color: black;
+  color: inherit; /* Changed from black to inherit */
   font-size: 1.5em;
 
   @media (min-width: 400px) {
@@ -173,7 +173,7 @@
   align-items: center;
   justify-content: flex-start;
   padding-left: 1rem;
-  color: black;
+  color: inherit; /* Changed from black to inherit */
   font-size: 1.5em;
 
   @media (min-width: 400px) {
@@ -192,7 +192,6 @@
     font-size: 1rem;
   }
 }
-
 
 .arrow {
   position: absolute;
@@ -236,3 +235,8 @@
 .indicator-inactive {
   background-color: grey;
 }
+
+/* Add dark mode specific styles if needed
+::global(.dark) .genre-chip {
+  border-color: #888;
+} */
